changed some few simple things

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h3>Quem sou eu?</h3> 
+  <h3 id="qm-sou-eu">Quem sou eu?</h3> 
   <div class="persContainer">
   <div class="persData">
     <b>Nome:</b> Gleyton Welligton Santos <br>
@@ -26,7 +26,7 @@
 
     
   </div>
-    </div>
+  </div>
 
   <h3>Onde moro?</h3> <br>
   <b>Como é meu bairro:</b> Moro no bairro Boa Vista de Vitória da conquista, 
@@ -64,7 +64,9 @@
       windowns, Linux, etc. De longe a que eu mais tinha interesse de participar.
     </li>
   </ul>
+  </div>
 
+  <div>
   <h3>Disciplinas do semestre atual:</h3>
   <b>Planejamento de carreiras</b>
   <ul>
