fixed small mistake

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <br><br>
 </div>
   <footer>
-    Contato: gleyton10cte@gmail.com <br>
+    Contato: caitanoprata@gmail.com <br>
   </footer>
   <script src="script.js"></script>
 </body>
