--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <h3 id="qm-sou-eu">Quem sou eu?</h3> 
-  <div class="persContainer">
+  <h3 id="qmSouEu">Quem sou eu?</h3> 
+  <div class="persInfo"">
   <div class="persData">
     <b>Nome:</b> Gleyton Welligton Santos <br>
     <h3>Dados pessoais: </h3> 
