fixed some info

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
   <h3 id="qmSouEu">Quem sou eu?</h3> 
-  <div class="persInfo"">
+  <div class="persInfo">
   <div class="persData">
-    <b>Nome:</b> Gleyton Welligton Santos <br>
+    <b>Nome:</b> Caetano Santos Prates da Silva <br>
     <h3>Dados pessoais: </h3> 
-    <b>Naturalidade:</b> Caetité <br>
-    <b>Idade:</b> 22 anos <br>
-    <b>Mãe:</b> Zélia de Azevedo Santos <br>
-    <b>Pai:</b> Wanderley Vieira Santos <br>
+    <b>Naturalidade:</b> Vitoria da conquista <br>
+    <b>Idade:</b> 18 anos <br>
+    <b>Mãe:</b> Teamara Santos Prates da Silva <br>
+    <b>Pai:</b> Nery Claudio Prates da Silva <br>
     <br>
   </div>
   <div class="imgAvatar">
