--- a/index.html
+++ b/index.html
@@ -9,95 +9,109 @@
 </head>
 
 <body>
-  <h3 id="qmSouEu">Quem sou eu?</h3> 
+  <h3 id="qmSouEu">Quem sou eu?</h3>
   <div class="persInfo">
-  <div class="persData">
-    <b>Nome:</b> Caetano Santos Prates da Silva <br>
-    <h3>Dados pessoais: </h3> 
-    <b>Naturalidade:</b> Vitoria da conquista <br>
-    <b>Idade:</b> 18 anos <br>
-    <b>Mãe:</b> Teamara Santos Prates da Silva <br>
-    <b>Pai:</b> Nery Claudio Prates da Silva <br>
+    <div class="persData">
+      <b>Nome:</b> Caetano Santos Prates da Silva <br>
+      <h3>Dados pessoais: </h3>
+      <b>Naturalidade:</b> Vitoria da conquista <br>
+      <b>Idade:</b> 18 anos <br>
+      <b>Mãe:</b> Teamara Santos Prates da Silva <br>
+      <b>Pai:</b> Nery Claudio Prates da Silva <br>
+      <br>
+    </div>
+    <div class="imgAvatar">
+      <img id="image" src="./eu.jpg" width="120px">
+      <p> "Literalmente eu cara" </p>
+
+
+    </div>
+  </div>
+
+  <div class="localInfo">
+    <h3>Onde moro?</h3> <br>
+    <b>Como é meu bairro:</b> Moro no bairro Boa Vista de Vitória da conquista,
+    me mudei no ínicio desse ano e pela primeira vez moro em um predio.
+    O bairro é bem tranquilo, tirando quando chega nos horários de pico,
+    eu moro perto do Sêneca então sempre enche de carro buzinando lá,
+    Tenho que admitir que a vista é incrivel, pra quem não ta acostumado com isso é coisa de outro mundo.
+    <br>
     <br>
   </div>
-  <div class="imgAvatar">
-    <img id="image" src="./eu.jpg" width="120px"> 
-   <p>   "Literalmente eu cara" </p>
 
-    
-  </div>
-  </div>
+  <div class="disciUltSem">
+    <h3>Disciplinas Cursadas no último semestre:</h3>
+    <div class="classes">
+      <div class="classesRow1">
+        <b>Banco de dados</b>
+        <ul>
+          <li> <b>Impressões:</b> Gostei das aulas de banco de dados, pois já trabalho na área como Analista de Dados, e
+            entender mais a fundo como funciona a construção de um banco, foi muito esclarecedor. </li>
+          <li> <b>Aproveitamento:</b> Durante o decorrer da disciplina aprendemos a como estruturar uma banco de dados,
+            entendendo como criar as entidades e relacionamentos das principais tabelas, em diferentes tipos de projeto.
+          </li>
+        </ul>
+        <b>Gestão ágil de projetos</b>
+        <ul>
+          <li> <b>Impressões e aproveitamento:</b> Essa disciplina foi muio importante para entender como funcionam as
+            principais
+            táticas de gestão de projetos, como Scrum, Agile, etc. </li>
+        </ul>
+      </div>
 
-  <h3>Onde moro?</h3> <br>
-  <b>Como é meu bairro:</b> Moro no bairro Boa Vista de Vitória da conquista, 
-  me mudei no ínicio desse ano e pela primeira vez moro em um predio. 
-  O bairro é bem tranquilo, tirando quando chega nos horários de pico, 
-  eu moro perto do Sêneca então sempre enche de carro buzinando lá,
-  Tenho que admitir que a vista é incrivel, pra quem não ta acostumado com isso é coisa de outro mundo.
-  <br>
-  <br>
-
-  <div>
-  <h3>Disciplinas Cursadas no último semestre:</h3>
-  <b>Banco de dados</b>
-  <ul>
-    <li> <b>Impressões:</b> Gostei das aulas de banco de dados, pois já trabalho na área como Analista de Dados, e
-      entender mais a fundo como funciona a construção de um banco, foi muito esclarecedor. </li>
-    <li> <b>Aproveitamento:</b> Durante o decorrer da disciplina aprendemos a como estruturar uma banco de dados,
-      entendendo como criar as entidades e relacionamentos das principais tabelas, em diferentes tipos de projeto. </li>
-  </ul> <br>
-  <b>Gestão ágil de projetos</b>
-  <ul>
-    <li> <b>Impressões e aproveitamento:</b> Essa disciplina foi muio importante para entender como funcionam as principais 
-      táticas de gestão de projetos, como Scrum, Agile, etc. </li>
-  </ul>
-
-  <b>Algortimos e Linguagens de programação</b>
-  <ul>
-    <li> <b>Impressões e aproveitamento:</b> Durante a disciplina foi possível aprender mais sobre como funciona a
-      criação e estruturação de algoritmos, e como funciona a linguagem de programação Javascript. </li>
-  </ul>
-  <b>Arquitetura e Organização de computadores</b>
-  <ul>
-    <li> <b>Impressões e aproveitamento:</b> Uma das matérias mais legais de semestre, pois aprendemos como funciona a
-      arquitetura de um computador, e a sua organização. Além de entender mais sobre sistemas operacionais, como o
-      windowns, Linux, etc. De longe a que eu mais tinha interesse de participar.
-    </li>
-  </ul>
+      <div class="classesRow2">
+        <b>Algortimos e Linguagens de programação</b>
+        <ul>
+          <li> <b>Impressões e aproveitamento:</b> Durante a disciplina foi possível aprender mais sobre como funciona a
+            criação e estruturação de algoritmos, e como funciona a linguagem de programação Javascript. </li>
+        </ul>
+        <b>Arquitetura e Organização de computadores</b>
+        <ul>
+          <li> <b>Impressões e aproveitamento:</b> Uma das matérias mais legais de semestre, pois aprendemos como
+            funciona a
+            arquitetura de um computador, e a sua organização. Além de entender mais sobre sistemas operacionais, como o
+            windowns, Linux, etc. De longe a que eu mais tinha interesse de participar.
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <div>
-  <h3>Disciplinas do semestre atual:</h3>
-  <b>Planejamento de carreiras</b>
-  <ul>
-    <li> <b>Expectativas:</b> Nessa disciplina a expectativa é de que eu aprenda mais sobre o mercado de trabalho, e a
-      como me organizar para conseguir um emprego. </li>
-  </ul>
-  <b>Desenvolvimento Front-end</b>
-  <ul>
-    <li> <b>Expectativas:</b> Aprender como funciona o processo de desenvolvimento front end, suas principais
-      technologias e a como usá-las. </li>
-  </ul>
+    <h3>Disciplinas do semestre atual:</h3>
+    <b>Planejamento de carreiras</b>
+    <ul>
+      <li> <b>Expectativas:</b> Nessa disciplina a expectativa é de que eu aprenda mais sobre o mercado de trabalho, e a
+        como me organizar para conseguir um emprego. </li>
+    </ul>
+    <b>Desenvolvimento Front-end</b>
+    <ul>
+      <li> <b>Expectativas:</b> Aprender como funciona o processo de desenvolvimento front end, suas principais
+        technologias e a como usá-las. </li>
+    </ul>
 
-  <b>Lógica para computação</b>
-  <ul>
-    <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de algortimos
-      mais complexos. </li>
-  </ul>
-  
-  <b>Lógica para computação</b>
-  <ul>
-    <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de algortimos
-      mais complexos. </li>
-  </ul>
+    <b>Lógica para computação</b>
+    <ul>
+      <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de
+        algortimos
+        mais complexos. </li>
+    </ul>
 
-  <b>Lógica para computação</b>
-  <ul>
-    <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de algortimos
-      mais complexos. </li>
-  </ul>
-  <br><br>
-</div>
+    <b>Lógica para computação</b>
+    <ul>
+      <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de
+        algortimos
+        mais complexos. </li>
+    </ul>
+
+    <b>Lógica para computação</b>
+    <ul>
+      <li> <b>Expectativas:</b> Aprender mais sobre a lógica de programação, como funciona o desenvolvimento de
+        algortimos
+        mais complexos. </li>
+    </ul>
+    <br><br>
+  </div>
   <footer>
     Contato: caitanoprata@gmail.com <br>
   </footer>
